--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -22,7 +22,7 @@ To install it, first create a Kubernetes ConfigMap that will hold the Prometheus
 
 [source,sh,role="copypaste"]
 ----
-oc create configmap prom --from-file=prometheus.yml=$CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs/src/main/kubernetes/prometheus.yml
+oc create configmap prom --from-file=prometheus.yml=src/main/kubernetes/prometheus.yml
 ----
 
 This will create a ConfigMap using the contents of the `src/main/kubernetes/prometheus.yml` file in your project (we've created this file for you). It contains basic Prometheus configuration, plus a specific _target_ which instructs it to look for application metrics from both Prometheus itself, and our `people` app, on HTTP port 8080 at the `/q/metrics` endpoint. Here's a snippet of that file:
@@ -56,7 +56,7 @@ Next, fill out the following fields:
 * *Application Name*: `prometheus`
 * *Name*: `prometheus`
 
-Leave the rest as-is and click *Create*:
+Leave the rest as-is and select *Create*:
 
 image::search-prometheus-image.png[Prometheus, 800]
 
@@ -69,6 +69,11 @@ Finally, mount the ConfigMap into the running container:
 oc set volume deployment/prometheus --add -t configmap --configmap-name=prom -m /etc/prometheus/prometheus.yml --sub-path=prometheus.yml
 ----
 
+[NOTE]
+====
+In case you see *Warning: would violate PodSecurity "restricted:v1.24"*, you can ignore it during the workshop.
+====
+
 You should get `deployment.extensions/prometheus volume updated` and this will cause the contents of the `ConfigMap`'s prometheus.yml` data to be mounted at `/etc/prometheus/prometheus.yml` where Prometheus is expecting it, and it will start scraping metrics from our app. But our app does not yet expose metrics. We'll do that in the next step.
 
 Verify Prometheus is up and running:
@@ -80,7 +85,7 @@ oc rollout status -w deployment/prometheus
 
 You should see `deployment "prometheus" successfully rolled out`.
 
-Once it completes, click on the arrow to access the prometheus query UI:
+Once it completes, select on the arrow to access the prometheus query UI:
 
 image::prometheus-route.png[Prometheus, 700]
 
@@ -94,7 +99,7 @@ Like other exercises, we'll need another extension to enable metrics. Install it
 
 [source,sh,role="copypaste"]
 ----
-mvn quarkus:add-extension -Dextensions="micrometer-registry-prometheus" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
+mvn quarkus:add-extension -Dextensions="micrometer-registry-prometheus"
 ----
 
 You should see:
@@ -245,7 +250,7 @@ Run the following command which will build and deploy using the OpenShift extens
 
 [source,sh,role="copypaste"]
 ----
-mvn clean package -DskipTests -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs && \
+mvn clean package -DskipTests && \
 oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
 oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
@@ -276,11 +281,11 @@ image:prom.png[Prometheus,800]
 
 These are the metrics exposed by our application, both raw numbers (like number of converted names in the `nameconvert_process_counter_total` metric) along with quantiles of the same data across different time periods.
 
-Select `nameconvert_process_counter_total` in the box, and click **Execute**. This will fetch the values from our metric showing the number of converted names:
+Select `nameconvert_process_counter_total` in the box, and select **Execute**. This will fetch the values from our metric showing the number of converted names:
 
 image:promnames.png[names,800]
 
-Click the **Graph** tab to see it visually, and adjust the time period to `5m`:
+Select the **Graph** tab to see it visually, and adjust the time period to `5m`:
 
 image:promg1.png[names,800]
 
@@ -300,18 +305,18 @@ Let's create a Grafana Dashboard for our Quarkus App!
 
 == Install Grafana
 
-Follow the same process as before: On the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], click on `+Add to Project`, and choose "Container Image", and fill in the fields:
+Follow the same process as before: On the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], select on `+Add to Project`, and choose "Container Image", and fill in the fields:
 
 * *Image Name*: `quay.io/openshiftlabs/ccn-grafana:1.0`
 * *Application*: `Create Application`
 * *Application Name*: `grafana`
 * *Name*: `grafana`
 
-Leave the rest as-is and click *Create*:
+Leave the rest as-is and select *Create*:
 
 image::search-grafana-image.png[Grafana, 700]
 
-On the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View for your project^], you'll see Grafana spinning up. Once it completes, click on the arrow to access the Grafana UI:
+On the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View for your project^], you'll see Grafana spinning up. Once it completes, select on the arrow to access the Grafana UI:
 
 image::grafana-route.png[Prometheus, 700]
 
@@ -332,7 +337,7 @@ image::grafana-webui.png[Grafana, 700]
 
 ==== 10. Add a data source to Grafana
 
-Click Add data source and select *Prometheus* as data source type.
+Select Add data source and select *Prometheus* as data source type.
 
 image::grafana-datasource-types.png[Grafana, 700]
 
@@ -340,7 +345,7 @@ Fill out the form with the following values:
 
 * *URL*: `http://prometheus.{{USER_ID}}-project:9090`
 
-Click on *Save & Test* and confirm you get a success message:
+Select *Save & Test* and confirm you get a success message:
 
 image::grafana-ds-success.png[Grafana, 300]
 
@@ -356,7 +361,7 @@ image::grafana-create-dashboard.png[metrics_grafana, 900]
 
 This will create a new dashboard with a single Panel. Each Panel can visualize a computed metric (either a single metric, or a more complex query) and display the results in the Panel.
 
-Click on *Add an empty panel* to add a new panel with a query:
+Select *Add an empty panel* to add a new panel with a query:
 
 image::grafana-add-query.png[metrics_grafana, 700]
 
@@ -364,7 +369,7 @@ In the Query box, type `name` to again get an autocompleted list of available me
 
 image::grafquery.png[query,600]
 
-Look for the one ending in `nameconvert_process_counter_total` and select it. Click the **Refresh** button in the upper right:
+Look for the one ending in `nameconvert_process_counter_total` and select it. Select the **Refresh** button in the upper right:
 
 image::grafrefresh.png[query,400]
 
@@ -372,7 +377,7 @@ The metrics should immediately begin to show in the graph above:
 
 image::grafgraf.png[graf,800]
 
-Next click on the _Visualization_ on the right:
+Next select on the _Visualization_ on the right:
 
 image::grafvis.png[graf,800]
 
@@ -380,7 +385,7 @@ This lets you fine tune the display, along with the type of graph (bar, line, ga
 
 image::grafgen.png[graf,800]
 
-Click the **Save** icon at the top to save our new dashboard, enter `Quarkus Metrics Dashboard` as its name (you can actually name it any name you want, it will show up in a list of dashboards later on).
+Select the **Save** icon at the top to save our new dashboard, enter `Quarkus Metrics Dashboard` as its name (you can actually name it any name you want, it will show up in a list of dashboards later on).
 
 image::grafdashsave.png[graf,800]
 
@@ -401,13 +406,13 @@ image::grafjvm.png[jvm,500]
 
 == Fix layout
 
-After saving, go back to the main dashboard (click on **My Dashboard** at the top and then select it under _Recent Dashboards_). Change the time value to _Last 30 Minutes_ at the top-right:
+After saving, go back to the main dashboard (select **My Dashboard** at the top and then select it under _Recent Dashboards_). Change the time value to _Last 30 Minutes_ at the top-right:
 
 image::graftime.png[time,500]
 
 Finally, move the _Converted Names_ Dashboard to the right of the _Converter Performance_ by dragging its title bar to the right, and then expand the memory graph to take up the full width.
 
-Click **Save Dashboad** again to save it. Your final Dashboard should look like:
+Select **Save Dashboad** again to save it. Your final Dashboard should look like:
 
 image::graffinal.png[final,500]
 
