--- a/docs/panache.adoc
+++ b/docs/panache.adoc
@@ -547,11 +547,11 @@ You should get up to 2 records returned (since we passed `length=2` in the query
 
 == Deploy to OpenShift
 
-Our production environment needs a "real" database so let's deploy a Postgres database to OpenShift. Back in the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], select **+Add to Project** on the left. Then, Type in `PostgreSQL (Ephemeral)` in the search box, and select on the *PostgreSQL (ephemeral)*:
+Our production environment needs a "real" database so let's deploy a Postgres database to OpenShift. Back in the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^], select **+Add to Project** on the left. Then, Type in `PostgreSQL (Ephemeral)` in the search box, and select the *PostgreSQL (ephemeral)*:
 
 image::db.png[db, 700]
 
-Select on *Instantiate Template* and fill in the following fields, leaving the others as their default values:
+Select *Instantiate Template* and fill in the following fields, leaving the others as their default values:
 
 * **Namespace** (the first one): Select `{{ USER_ID }}-project`
 * **Namespace** (the _second_ one): `openshift`
@@ -574,7 +574,7 @@ oc label dc/postgres-database app.kubernetes.io/part-of=people --overwrite && \
 oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
-This will deploy the database to our new project. Select on the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^] to see it:
+This will deploy the database to our new project. Select the {{ CONSOLE_URL }}/topology/ns/{{ USER_ID }}-project[Topology View^] to see it:
 
 image::database-deployment.png[inventory_db_deployments, 700]
 
