Update all for RHBQ 2.13, Dev Spaces, OpenShift 4.12, OpenJDK17

--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -49,7 +49,7 @@ echo "This is a bash shell command that you can copy/paste by clicking"
 
 You will be using Visual Studio Code (VS Code) based on https://developers.redhat.com/products/openshift-dev-spaces/overview[Red Hat OpenShift Dev Spaces]. **Changes to files are auto-saved every few seconds**, so you don't need to explicitly save changes.
 
-To get started, {{ DS_URL }}[access the Red Hat OpenShift Dev Spaces instance^] and click on *Log in with OpenShift* button:
+To get started, {{ DS_URL }}[access the Red Hat OpenShift Dev Spaces instance^] and select *Log in with OpenShift* button:
 
 image::login_with_openshift.png[login,800]
 
@@ -63,12 +63,12 @@ image::che-login.png[login,800]
 
 [NOTE]
 ====
-In case you see the *Authorize Access* page as below, click on *Allow selected permissions* button.
+In case you see the *Authorize Access* page as below, select *Allow selected permissions* button.
 
 image::auth-access.png[auth-access, 800]
 ====
 
-Once you log in, you’ll be placed on the *Create Workspace* dashboard. Copy the following `Git Repo URL` and click on `Create & Open`.
+Once you log in, you’ll be placed on the *Create Workspace* dashboard. Copy the following `Git Repo URL` and select `Create & Open`.
 
 * *Git Repo URL*: `https://github.com/RedHat-Middleware-Workshops/quarkus-workshop-m1m2-labs/tree/ocp-4.12`
 
