--- a/docs/native.adoc
+++ b/docs/native.adoc
@@ -38,7 +38,7 @@ Within the `pom.xml` is the declaration for the Quarkus Maven plugin which conta
 
 We use a profile because, you will see very soon, packaging the native image takes a few seconds. However, this compilation time is only incurred _once_, as opposed to _every_ time the application starts, which is the case with other approaches for building and executing JARs.
 
-Create a native executable by using the **che: 04. Build Native App** task:
+Create a native executable by using the **devfile: 04. Build Native App** task:
 
 image::cmd-native.png[livecoding, 700]
 
@@ -86,22 +86,20 @@ It’s a binary that can only run on Linux, but as you’ll see in a moment, thi
 
 == Run native image
 
-Since our environment here is Linux, you can _just run it_. In the terminal, run:
+Since our environment here is Linux, you can _just run it_. Select **devfile: 06. Run Native App** task:
 
-[source,sh,role="copypaste"]
-----
-target/people-1.0-SNAPSHOT-runner -Dquarkus.http.port=8081 # <1>
-----
-<1> We use port `8081` here to avoid conflicting with our already-running development mode Quarkus app.
+image::run-native.png[livecoding, 700]
+
+We use port `8081` here to avoid conflicting with our already-running development mode Quarkus app.
 
 Notice the amazingly fast startup time:
 
 [source,none,role="copypaste"]
 ----
-INFO  [io.quarkus] (main) people 1.0-SNAPSHOT native (powered by Quarkus 2.13.7.Final-redhat-00003) started in 0.023s. Listening on: http://0.0.0.0:8081
+INFO  [io.quarkus] (main) people 1.0-SNAPSHOT native (powered by Quarkus 2.13.7.Final-redhat-00003) started in 0.019s. Listening on: http://0.0.0.0:8081
 ----
 
-That's *23* milliseconds to start up.
+That's *19* milliseconds to start up.
 
 And extremely low memory usage as reported by the Linux `ps` utility. While the app is running, open another Terminal and run:
 
@@ -128,14 +126,14 @@ Make sure the app is still working as expected (we'll use `curl` this time to ac
 
 [source,sh,role="copypaste"]
 ----
-curl http://localhost:8081/hello
+curl http://localhost:8081/hello/greeting/quarkus
 ----
 
 You should see:
 
 [source,none]
 ----
-hello
+hello quarkus from <hostname>
 ----
 
 Nice!
