--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -250,7 +250,7 @@ Although your VS Code is running on the Kubernetes cluster, it's running with a 
 
 [source,sh,role="copypaste"]
 ----
-oc login -u {{ USER_ID }} --p {{ OPENSHIFT_USER_PASSWORD }} https://openshift.default.svc:443
+oc login -u {{ USER_ID }} -p {{ OPENSHIFT_USER_PASSWORD }} https://openshift.default.svc:443
 ----
 
 You should see:
