--- a/docs/panache.adoc
+++ b/docs/panache.adoc
@@ -42,15 +42,30 @@ The database connection details (JDBC url, database credentials) are specified i
 %prod.quarkus.datasource.jdbc.driver=org.postgresql.Driver
 
 %dev.quarkus.datasource.db-kind=h2
-%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:person
-%dev.quarkus.datasource.jdbc.driver=org.h2.Driver
+
 
 %test.quarkus.datasource.db-kind=h2
-%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:person
-%test.quarkus.datasource.jdbc.driver=org.h2.Driver
 ----
 
 This causes the `%dev` properties (using H2 database) to be active in development (and the `%test` in test mode), and the `%prod` properties (using Postgres) to be used when in production (not in dev or test).
+
+You probably noticed that there was magic and we didn't specify the JDBC URL, this is because of https://quarkus.io/guides/databases-dev-services[Quarkus Dev Services^] and it works for all DBs, but here we can't have containers so we've done in-memory H2.
+
+When you take a look at the Quarkus Dev Mode terminal, you should see the following logs:
+
+[source,sh]
+----
+Dev Services for the default datasource (h2) started.
+----
+
+Then, press `c` to find more information about the H2 Dev Services.
+
+[source,sh]
+----
+== Dev Services
+
+  Injected Config:  quarkus.datasource.password=sa, quarkus.datasource.db-kind=h2, quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost:42165/mem:quarkus;DB_CLOSE_DELAY=-1, quarkus.datasource.username=sa
+----
 
 [NOTE]
 ====
