--- a/docs/tracing.adoc
+++ b/docs/tracing.adoc
@@ -195,10 +195,10 @@ import org.acme.people.model.StarWarsPerson;
 import org.eclipse.microprofile.rest.client.annotation.ClientHeaderParam;
 import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
 
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
 
 @RegisterRestClient // <1>
 @Path("/api") // <2>
